<resources>
    <string name="app_name">SampleGUI</string>
    <string name="title_activity_table">TableActivity</string>

    <string name="text_1">Text 1…</string>
    <string name="text_2">Text 2…</string>

    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>

    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras elementum ullamcorper tellus, eget ultricies nisi posuere rhoncus. Nam dignissim dui sed enim consectetur sodales
    </string>
</resources>
